--- a/css/cours.css
+++ b/css/cours.css
@@ -1,3 +1,75 @@
 body {
-    margin: 0 auto;
-}
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f2f2f2;
+  }
+  
+  h1 {
+    color: #333; 
+    font-size: 50px;
+    text-align: center;
+    margin-top: 50px;
+  }
+  
+  section {
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    padding-left: 20px;
+  }
+  
+  .column-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .column {
+    flex-basis: 30%;
+    padding: 30px;
+  }
+  
+  h3 {
+    color: #333;
+    margin-left: 25px;
+    font-size: 35px;
+  }
+  
+  h4 {
+    color: #555;
+    font-size: 22px;
+  }
+  
+  p {
+    color: #777;
+  }
+  
+  nav {
+    background-color: #333;
+    padding: 20px;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+  }
+  
+  nav li {
+    margin-right: 20px;
+    font-size: 25px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #fff; 
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+  
+  nav a:hover {
+    color: #00e1ff; 
+  }
+  
