--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,103 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0px;
+
+  body.accueil{
+
+    background-color: black;
+    color: white;
   }
-  
-  header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  main {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
     text-align: center;
-    background-color: lightcoral; 
-  }
   
-  nav {
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  h2 {
+    text-align: center;
+    margin: auto;
+    border: 1px solid white;
+    padding: 10px;
+    width: 600px;
+    border-radius: 50% / 10%;
+  }
+
+  div {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    align-items: center;
+    position: relative;
+    flex-wrap: wrap;
+    
+    
   }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-  }
-  
-  nav li {
-    margin-right: 20px;
-  }
-  
-  main {
+
+  ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 50px;
+    justify-content: space-around;
+    list-style: none;
+    padding: 0;
   }
+
+  li {
+    /* width: 25%; */
+    margin: 2%;
+    text-align: center;
+
+ 
+  }
+
+  li img {
+    display: block;
+    width: 300px;
+    height:180px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+
+  }
+  li img:hover{
   
-  section {
-    width: 60%;
-    margin: 20px;
-    padding: 20px;
-    text-align: left;
+      transform: scale(1.1);
+    }
+ 
+
+
+  li a {
+    display: block;
+    text-align: center;
+    height: 200px;
+    color: rgb(0, 0, 0);
   }
+
+
+  li span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 18px;
+  }
+
+  a.accueil {
+    text-decoration: none;
+    font-size: 28px;
+    background-color: black;
+    padding: 10px 50px;
+    border-radius: 10px;
+    color: white;
+    border: 1px solid white;
+    
+  }
+  a.accueil:hover{
+    color: rgb(179, 179, 235);
+  }
+
